gcc/testsuite/gdc.test/runnable/test13504.d
// REQUIRED_ARGS: -O -cov

bool func(T)()
{
    return true;
}

void main()
{
    assert(func!int() || int.sizeof);
}
